--- a/radarr/compose.yaml
+++ b/radarr/compose.yaml
@@ -1,5 +1,6 @@
 services:
   radarr:
+    container_name: ${NAME}
     image: linuxserver/radarr:latest
     restart: unless-stopped
     networks:
@@ -16,14 +17,12 @@ services:
       - TZ=Europe/London
     labels:
       - traefik.enable=true
-      - traefik.http.routers.radarr.rule=Host(`films.arranhs.com`)
-      - traefik.http.routers.radarr.middlewares=radarr
-      - traefik.http.middlewares.radarr.basicAuth.usersfile=/auth/.radarrpasswd
-
+      - traefik.http.routers.${NAME}.rule=Host(`films.arranhs.com`)
+      - traefik.http.routers.${NAME}.middlewares=${NAME}
+      - traefik.http.middlewares.${NAME}.basicAuth.usersfile=/auth/.radarrpasswd
 networks:
   traefik:
     external: true
-
 x-dockge:
   urls:
     - https://films.arranhs.com
