General update to many services

--- a/.example/compose.yaml
+++ b/.example/compose.yaml
@@ -1,6 +1,9 @@
-# Example
+########################################################
+# example
+#
 # Create password:
 # htpasswd -c ~/traefik/auth/.examplepasswd arranhs
+########################################################
 services:
   example:
     container_name: example
