--- a/gotify/compose.yaml
+++ b/gotify/compose.yaml
@@ -1,3 +1,6 @@
+########################################################
+# gotify
+########################################################
 services:
   gotify:
     container_name: ${NAME}
