--- a/jellyfin/compose.yaml
+++ b/jellyfin/compose.yaml
@@ -1,3 +1,6 @@
+########################################################
+# jellyfin
+########################################################
 services:
   jellyfin:
     container_name: ${NAME}
