--- a/radarr/compose.yaml
+++ b/radarr/compose.yaml
@@ -1,3 +1,9 @@
+########################################################
+# radarr
+#
+# Create password:
+# htpasswd -c ~/traefik/auth/.radarrpasswd arranhs
+########################################################
 services:
   radarr:
     container_name: ${NAME}
