--- a/jellystat/compose.yaml
+++ b/jellystat/compose.yaml
@@ -1,3 +1,6 @@
+########################################################
+# jellystat
+########################################################
 services:
   jellystat:
     container_name: ${NAME}
