--- a/bazarr/compose.yaml
+++ b/bazarr/compose.yaml
@@ -6,7 +6,7 @@
 ########################################################
 services:
   bazarr:
-    container_name: bazarr
+    container_name: ${NAME}
     image: linuxserver/bazarr:latest
     restart: unless-stopped
     networks:
