--- a/sftpgo/compose.yaml
+++ b/sftpgo/compose.yaml
@@ -3,13 +3,13 @@
 ########################################################
 services:
   sftpgo:
-    container_name: sftpgo
+    container_name: ${NAME}
     image: drakkan/sftpgo:latest
     restart: unless-stopped
     networks:
       - traefik
     ports:
-      - 8090:8080 
+      - 8090:8080
       # - 2022:2022 # SFTP Port
       # - 10080:10080 # WebDav Port
     volumes:
@@ -19,7 +19,6 @@ services:
       - SFTPGO_WEBDAVD__BINDINGS__0__PORT=10080
     labels:
       - traefik.enable=true
-      # UI
       - traefik.http.routers.${NAME}.rule=Host(`${URL}`)
       - traefik.http.routers.${NAME}.service=${NAME}
       - traefik.http.services.${NAME}.loadbalancer.server.port=8080
