--- a/lobechat/compose.yaml
+++ b/lobechat/compose.yaml
@@ -1,30 +1,27 @@
 ########################################################
-# jellystat
+# bazarr
+#
+# Create password:
+# htpasswd -c ~/traefik/auth/.lobechatpasswd arranhs
 ########################################################
 services:
-  jellystat:
+  lobechat:
     container_name: ${NAME}
-    image: cyfershepard/jellystat:latest
+    image: lobehub/lobe-chat:latest
     restart: unless-stopped
     networks:
-      - postgres
       - traefik
     ports:
-      - 3000:3000
-    volumes:
-      - ~/jellystat:/app/backend/backup-data
+      - 3210:3210
     environment:
-      - POSTGRES_IP=postgres
-      - POSTGRES_PORT=5432
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - JWT_SECRET=49e1a1c8c81b443d90dde1b053040b46
+      - ACCESS_CODE=-
     labels:
       - traefik.enable=true
       - traefik.http.routers.${NAME}.rule=Host(`${URL}`)
+      - traefik.http.routers.${NAME}.middlewares=${NAME}
+      - traefik.http.middlewares.${NAME}.basicAuth.usersfile=/auth/.${NAME}passwd
+      - traefik.http.middlewares.${NAME}.basicauth.removeheader=true
 networks:
-  postgres:
-    external: true
   traefik:
     external: true
 x-dockge:
