--- a/open-webui/compose.yaml
+++ b/open-webui/compose.yaml
@@ -1,9 +1,3 @@
-########################################################
-# open-webui
-#
-# Create password:
-# htpasswd -c ~/traefik/auth/.openwebuipasswd arranhs
-########################################################
 services:
   openwebui:
     container_name: ${NAME}
@@ -16,12 +10,16 @@ services:
     volumes:
       - ~/open-webui:/app/backend/data
     environment:
-      - WEBUI_AUTH=False
+      - OPENAI_API_BASE_URL=https://llm.arranhs.com
+      - WEBUI_AUTH_TRUSTED_EMAIL_HEADER=X-Forwarded-User
+    env_file:
+      # Set in .env.secrets:
+      # - OPENAI_API_KEY
+      - .env.secrets
     labels:
       - traefik.enable=true
       - traefik.http.routers.${NAME}.rule=Host(`${URL}`)
-      - traefik.http.routers.${NAME}.middlewares=${NAME}
-      - traefik.http.middlewares.${NAME}.basicAuth.usersfile=/auth/.${NAME}passwd
+      - traefik.http.routers.${NAME}.middlewares=oauth
 networks:
   traefik:
     external: true
