--- a/webdav/compose.old.yaml
+++ b/webdav/compose.old.yaml
@@ -6,7 +6,7 @@
 ########################################################
 services:
   webdav:
-    container_name: webdav
+    container_name: ${NAME}
     image: bytemark/webdav:latest
     restart: unless-stopped
     networks:
