--- a/litellm/.env.secrets.example
+++ b/litellm/.env.secrets.example
@@ -1,2 +1,8 @@
 LITELLM_MASTER_KEY=
 LITELLM_SALT_KEY=
+
+CEREBRAS_API_KEY=
+GROQ_API_KEY=
+HUGGINGFACE_API_KEY=
+OPENROUTER_API_KEY=
+TOGETHER_AI_API_KEY=
