--- a/radarr/compose.yaml
+++ b/radarr/compose.yaml
@@ -1,12 +1,6 @@
-########################################################
-# radarr
-#
-# Create password:
-# htpasswd -c ~/traefik/auth/.radarrpasswd arranhs
-########################################################
 services:
   radarr:
-    container_name: ${NAME}
+    container_name: $NAME
     image: linuxserver/radarr:latest
     restart: unless-stopped
     networks:
@@ -23,12 +17,12 @@ services:
       - TZ=Europe/London
     labels:
       - traefik.enable=true
-      - traefik.http.routers.${NAME}.rule=Host(`${URL}`)
-      - traefik.http.routers.${NAME}.middlewares=${NAME}
-      - traefik.http.middlewares.${NAME}.basicAuth.usersfile=/auth/.${NAME}passwd
+      - traefik.http.routers.$NAME.rule=Host(`$URL`)
+      - traefik.http.routers.$NAME.middlewares=$NAME
+      - traefik.http.middlewares.$NAME.basicAuth.usersfile=/auth/.${NAME}passwd
 networks:
   traefik:
     external: true
 x-dockge:
   urls:
-    - https://${URL}
+    - https://$URL
