--- a/webdav/compose.rclone.yaml
+++ b/webdav/compose.rclone.yaml
@@ -7,32 +7,27 @@
 services:
   webdav:
     container_name: ${NAME}
-    image: bytemark/webdav:latest
+    image: rclone/rclone:latest
     restart: unless-stopped
     networks:
       - traefik
     ports:
-      - 8888:80
+      - 8888:8888
     volumes:
-      - ~:/var/lib/dav/data
+      - ~:/files
+    user: 1000:1000
     environment:
-      - SERVER_NAMES=webdav.arranhs.duckdns.org
-      - ANONYMOUS_METHODS=ALL
-      - USERID=1000
-      - GROUPID=1000
+      - TZ=Europe/London
     labels:
       - traefik.enable=true
       - traefik.http.routers.${NAME}.rule=Host(`${URL}`)
       - traefik.http.routers.${NAME}.middlewares=${NAME}
       - traefik.http.middlewares.${NAME}.basicAuth.usersfile=/auth/.${NAME}passwd
-    entrypoint: [bash]
-    command: >
-      -c '
-      apk --no-cache add shadow &&
-      usermod -u $USERID www-data &&
-      groupmod -g $GROUPID www-data && 
-      docker-entrypoint.sh httpd-foreground
-      '
+    command: |
+      serve webdav /files
+        -v
+        --addr 0.0.0.0:8888
+        --vfs-cache-mode off
 networks:
   traefik:
     external: true
