--- a/http/compose.yaml
+++ b/http/compose.yaml
@@ -5,11 +5,15 @@ services:
     restart: unless-stopped
     network_mode: bridge
     ports:
-      - 8899:80
+      - 88:88
     volumes:
       - ~:/files:ro
     user: 1000:1000
     environment:
       - TZ=Europe/London
     command: >
-      serve http /files --addr 0.0.0.0:80 --read-only
+      serve http /files
+        -v
+        --addr 0.0.0.0:88
+        --vfs-cache-mode off
+networks: {}
