--- a/postgres/compose.yaml
+++ b/postgres/compose.yaml
@@ -1,20 +1,25 @@
-########################################################
-# postgres
-########################################################
 services:
   postgres:
-    container_name: ${NAME}
+    container_name: postgres
     image: postgres:16
     restart: unless-stopped
+    networks:
+      - postgres
     ports:
       - 5432:5432
     volumes:
       - ~/postgres:/var/lib/postgresql/data
+    user: 1000:1000
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
-    networks:
-      - postgres
+      - PGUSER=postgres
+    healthcheck:
+      test: pg_isready -d postgres
+      start_period: 10s
+      interval: 10s
+      timeout: 10s
+      retries: 5
 networks:
   postgres:
     name: postgres
