--- a/twitchets/compose.yaml
+++ b/twitchets/compose.yaml
@@ -1,8 +1,11 @@
 services:
-  twichets:
+  twitchets:
     container_name: twitchets
     image: arranhs/twitchets:develop
     restart: unless-stopped
     network_mode: bridge
     volumes:
       - ~/twitchets:/twitchets
+    environment:
+      - DEBUG=true
+networks: {}
