Update all example secrets files

--- a/litellm/.env.secrets.example
+++ b/litellm/.env.secrets.example
@@ -1,7 +1,9 @@
 LITELLM_MASTER_KEY=
 LITELLM_SALT_KEY=
 
-CEREBRAS_API_KEY=
+CEREBRAS_API_KEY_GMAIL=
+CEREBRAS_API_KEY_LIVE=
+OLLAMA_API_KEY=
 GROQ_API_KEY=
 HUGGINGFACE_API_KEY=
 OPENROUTER_API_KEY=
